--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -89,17 +89,16 @@
         android:layout_marginTop="100dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/Taylors_Logo" />
+        app:srcCompat="@drawable/taylors_logo" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-
         android:layout_marginTop="196dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/home_page_searchBar_bg" />
+        app:srcCompat="@drawable/home_page_search_bar_bg" />
 
     <EditText
         android:id="@+id/editTextText2"
