--- a/app/src/main/res/layout/activity_vendor_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_vendor_sign_up_screen.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toTopOf="@+id/login_box" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/signUpButton"
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginBottom="20dp"
