--- a/app/src/main/res/layout/activity_vendor_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_vendor_sign_up_screen.xml
@@ -64,8 +64,9 @@
         android:layout_height="50dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/auth_button"
-        android:text="Log In"
+        android:text="Sign Up"
         android:textSize="16dp"
+        android:textColor="@color/secondary"
         android:textStyle="bold"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="@+id/login_box"
