--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/home_page_background"
-    tools:context=".screens.HomePage">
+    tools:context=".screens.HomeScreen">
 
 
     <ImageButton
@@ -48,7 +48,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="284dp"
         android:text="Ongoing Event"
         android:textColor="#333333"
@@ -130,8 +130,8 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="610dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="612dp"
         android:text="Upcoming Event"
         android:textSize="20sp"
         android:textStyle="bold"
