--- a/app/src/main/res/layout/activity_vendor_booking_calendar_screen.xml
+++ b/app/src/main/res/layout/activity_vendor_booking_calendar_screen.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="26dp"
         android:gravity="center"
         android:text="Book a Date"
-        android:textColor="#000000"
+        android:textColor="@color/text"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -150,27 +150,19 @@
                 android:text="2"
                 android:textAlignment="center" />
 
-            <Button
-                android:id="@+id/nextButton"
+            <TextView
                 android:layout_width="2dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="@drawable/red_circle"
                 android:text="3"
-                android:textSize="1.8mm"
-                android:textAlignment="center"
-                app:backgroundTint="@null" />
+                android:textAlignment="center" />
 
-            <Button
-                android:id="@+id/nextButton"
-                android:layout_width="2dp"
+            <TextView
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="@drawable/red_circle"
                 android:text="4"
-                android:textSize="1.8mm"
-                android:textAlignment="center"
-                app:backgroundTint="@null" />
+                android:textAlignment="center" />
 
             <TextView
                 android:layout_width="0dp"
@@ -226,7 +218,9 @@
                 android:text="12"
                 android:textAlignment="center" />
         </TableRow>
-        <TableRow>
+        <TableRow
+            android:layout_width="fill_parent">
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="40dp"
@@ -245,57 +239,102 @@
                 android:layout_weight="1"
                 android:text="15"
                 android:textAlignment="center" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="16"
-                android:textAlignment="center" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="17"
-                android:textAlignment="center" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="18"
-                android:textAlignment="center" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="19"
-                android:textAlignment="center" />
 
-        </TableRow>
-        <TableRow>
-            <TextView
+            <Button
+                android:id="@+id/cnsDate16Button"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
+                android:text="16"
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+
+            <Button
+                android:id="@+id/cnsDate17Button"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_circle"
+                android:text="17"
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+
+            <Button
+                android:id="@+id/cnsDate18Button"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_circle"
+                android:text="18"
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+
+            <Button
+                android:id="@+id/cnsDate19Button"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_circle"
+                android:text="19"
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+
+        </TableRow>
+        <TableRow
+            android:layout_width="fill_parent">
+            <Button
+                android:id="@+id/cnsDate20Button"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="20"
-                android:textAlignment="center" />
-            <TextView
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+            <Button
+                android:id="@+id/cnsDate21Button"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="21"
-                android:textAlignment="center" />
-            <TextView
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+            <Button
+                android:id="@+id/cnsDate22Button"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="22"
-                android:textAlignment="center" />
-            <TextView
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
+            <Button
+                android:id="@+id/cnsDate23Button"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="23"
-                android:textAlignment="center" />
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -511,49 +550,65 @@
         </TableRow>
 
         <TableRow>
-
-            <TextView
+            <Button
+                android:id="@+id/tffDate4Button"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="4"
-                android:textAlignment="center" />
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
 
             <Button
-                android:id="@+id/nextButton"
-                android:layout_width="2dp"
+                android:id="@+id/tffDate5Button"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/red_circle"
                 android:text="5"
-                android:textAlignment="center"
                 android:textSize="1.8mm"
-                app:backgroundTint="@null" />
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
 
             <Button
-                android:id="@+id/nextButton"
-                android:layout_width="2dp"
+                android:id="@+id/tffDate6Button"
+                android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
                 android:background="@drawable/red_circle"
-                android:text="6"
-                android:textAlignment="center"
+                android:text="4"
                 android:textSize="1.8mm"
-                app:backgroundTint="@null" />
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
 
-            <TextView
+            <Button
+                android:id="@+id/tffDate7Button"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="7"
-                android:textAlignment="center" />
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
 
-            <TextView
+            <Button
+                android:id="@+id/tffDate8Button"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
+                android:background="@drawable/red_circle"
                 android:text="8"
-                android:textAlignment="center" />
+                android:textSize="1.8mm"
+                android:textColor="@color/secondary"
+                android:textAlignment="center"
+                app:backgroundTint="@null"/>
 
             <TextView
                 android:layout_width="0dp"
