--- a/app/src/main/res/layout/activity_vendor_booking_calendar_screen.xml
+++ b/app/src/main/res/layout/activity_vendor_booking_calendar_screen.xml
@@ -13,24 +13,23 @@
         android:src="@drawable/blue_gradient_background" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/backButton"
         android:layout_width="55dp"
         android:layout_height="53dp"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="12dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_button_icon"
-        tools:ignore="MissingConstraints"/>
+        app:srcCompat="@drawable/back_button_icon" />
 
     <TextView
         android:id="@+id/titleText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="26dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="4dp"
         android:gravity="center"
         android:text="Book a Date"
         android:textColor="@color/text"
