--- a/app/src/main/res/layout/activity_event_details_screen.xml
+++ b/app/src/main/res/layout/activity_event_details_screen.xml
@@ -46,6 +46,7 @@
                 app:layout_constraintVertical_bias="0.055"
                 app:srcCompat="@drawable/back_button_icon" />
 
+<!--            <ImageButton-->
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="600dp"
@@ -101,6 +102,7 @@
                     android:layout_width="149dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:layout_marginRight="10dp"
                     android:background="#00000000"
                     android:scaleType="fitCenter"
                     app:layout_constraintEnd_toStartOf="@+id/textView"
@@ -108,9 +110,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/fandb_card1"
-                    tools:ignore="MissingConstraints"
-                    android:layout_marginRight="10dp"
-                    />
+                    tools:ignore="MissingConstraints" />
 
                 <ImageButton
                     android:id="@+id/imageButton2"
