--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,7 +104,7 @@
         android:layout_width="354dp"
         android:layout_height="384dp"
         android:elevation="15dp"
-        android:src="@drawable/directory1"
+        android:src="@drawable/dic02"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
