--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
 
 
     <TextView
+        android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -100,7 +101,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView1"
         android:layout_width="354dp"
         android:layout_height="384dp"
         android:elevation="15dp"
@@ -108,7 +109,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         tools:visibility="visible" />
@@ -126,11 +127,10 @@
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints"
         android:src="@drawable/insidescoop"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/descriptionTextView"
         android:layout_width="209dp"
         android:layout_height="108dp"
         android:layout_marginStart="9dp"
@@ -157,7 +157,7 @@
         android:layout_marginTop="84dp"
         android:text="Average Rating: 0"
         android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/descriptionTextView"
         tools:layout_editor_absoluteX="240dp"
         tools:ignore="MissingConstraints" />
 
@@ -166,16 +166,16 @@
         android:layout_width="238dp"
         android:layout_height="43dp"
         android:layout_marginTop="113dp"
+        android:numStars="5"
         android:scaleX="0.5"
         android:scaleY="0.5"
-        android:numStars="5"
         android:stepSize="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.934"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/descriptionTextView"
         app:layout_constraintVertical_bias="1.0" />
 
 
