--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:id="@+id/textView2"
         android:layout_width="390dp"
         android:layout_height="215dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/box"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
@@ -40,7 +41,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
         android:text="Vendor Details"
         android:textColor="@color/text"
@@ -68,25 +69,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:elevation="15dp"
         android:text="Inside Scoop"
         android:textColor="@color/secondary"
         android:textSize="25dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        android:elevation="15dp"/>
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="55dp"
         android:layout_height="53dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="25dp"
         android:background="#00000000"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back_button_icon"
@@ -120,63 +122,62 @@
         android:layout_height="148dp"
         android:layout_marginStart="21dp"
         android:layout_marginTop="12dp"
+        android:src="@drawable/insidescoop"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ratingBar"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintVertical_bias="0.0"
-        tools:ignore="MissingConstraints"
-        android:src="@drawable/insidescoop"
         tools:visibility="visible" />
 
     <TextView
         android:id="@+id/descriptionTextView"
-        android:layout_width="209dp"
-        android:layout_height="108dp"
+        android:layout_width="208dp"
+        android:layout_height="70dp"
         android:layout_marginStart="9dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="4dp"
         android:text="Inside Scoop is a popular ice \n cream maker known for its \n
         artisanal approach to crafting \n delectable frozen treats."
         android:textAlignment="center"
         android:textColor="@color/text"
         android:textSize="11sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/avgRating"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.038"
+        app:layout_constraintStart_toEndOf="@id/imageView2"
+        app:layout_constraintTop_toBottomOf="@id/textView4" />
 
     <TextView
         android:id="@+id/avgRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ratingBar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="8dp"
         android:text="Average Rating: 0"
-        android:textSize="10sp"
-        app:layout_constraintTop_toTopOf="@+id/descriptionTextView"
-        tools:layout_editor_absoluteX="240dp"
-        tools:ignore="MissingConstraints" />
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/imageView2"
+        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
 
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="238dp"
         android:layout_height="43dp"
-        android:layout_marginTop="113dp"
+        android:layout_marginTop="151dp"
         android:numStars="5"
         android:scaleX="0.5"
         android:scaleY="0.5"
         android:stepSize="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/descriptionTextView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
