event_preview done, put event id as extra in my intent

--- a/app/src/main/res/layout/activity_event_preview_screen.xml
+++ b/app/src/main/res/layout/activity_event_preview_screen.xml
@@ -36,8 +36,8 @@
         android:id="@+id/eventDescriptionText"
         android:layout_width="380dp"
         android:layout_height="35dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
 
         android:fontFamily="sans-serif-medium"
         android:textColor="#FFFFFF"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="345dp"
+        android:layout_marginTop="20dp"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,7 @@
         android:id="@+id/eventTimeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="345dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
@@ -70,10 +70,10 @@
     <ImageView
         android:id="@+id/slcwalkwayimage"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="230dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:contentDescription="layout of slc walkway"
         android:src="@drawable/event_preview_layout"
         app:layout_constraintBottom_toTopOf="@+id/eventDetailButton"
@@ -86,8 +86,8 @@
         android:layout_width="274dp"
         android:layout_height="53dp"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="40dp"
 
+        android:layout_marginBottom="24dp"
         android:background="@drawable/auth_button"
         android:fontFamily="sans-serif-black"
         android:text="VIEW EVENT >"
