--- a/app/src/main/res/layout/activity_event_details_screen.xml
+++ b/app/src/main/res/layout/activity_event_details_screen.xml
@@ -23,34 +23,31 @@
                 android:layout_height="49dp"
                 android:text="Event's Details"
                 android:textColor="@color/text"
-                android:textSize="30dp"
+                android:layout_marginTop="20dp"
+                android:textSize="28dp"
+                android:textAlignment="center"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.549"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.068" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
                 android:id="@+id/backImageButton"
                 android:layout_width="55dp"
                 android:layout_height="53dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
                 android:background="#00000000"
                 android:scaleType="fitCenter"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/Events_Details"
-                app:layout_constraintHorizontal_bias="0.68"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.055"
                 app:srcCompat="@drawable/back_button_icon" />
 
             <ImageButton
                 android:id="@+id/previewImageButton"
                 android:layout_width="450dp"
                 android:layout_height="270dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/event_card1"
                 android:background="#00000000"
@@ -73,28 +70,25 @@
                 android:id="@+id/textview6"
                 android:layout_width="342dp"
                 android:layout_height="35dp"
-                android:layout_marginLeft="10dp"
-                android:text="What's Happening now!"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Participating Vendors"
                 android:textColor="@color/text"
-                android:textSize="27dp"
-                android:layout_marginTop="10dp"
+                android:textSize="20dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.094"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="454dp"
-                android:paddingTop="?attr/actionBarSize"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/textview6" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
